--- a/views/common/part/_additionalProperty.ejs
+++ b/views/common/part/_additionalProperty.ejs
@@ -18,7 +18,6 @@
         </div>
     </div>
     <% }) %>
-    <p class="message"></p>
-    <p class="error message text-danger">
-    </p>
+    <span class="bmd-help text-danger d-block">
+    </span>
 </div>
