--- a/views/ticketTypeGroup/add.ejs
+++ b/views/ticketTypeGroup/add.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-券種グループマスタ新規登録
+券種グループ作成
 <%- contentFor('displayId') %>
 Aa-7
 <%- contentFor('styles') %>
@@ -16,23 +16,7 @@ Aa-7
             <%- include('../common/successMessage') %>
         </div>
 
-        <div class="form-group row">
-            <label for="identifier" class="">
-                券種グループコード<span class="text-danger">＊</span>
-            </label>
-            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
-                value="<%= forms.identifier %>">
-            <p class="message">
-                半角64文字以内でご入力ください。
-            </p>
-            <p class="error message text-danger">
-                <% if (errors && errors.identifier) { %>
-                <%- errors.identifier.msg %>
-                <% } %>
-            </p>
-        </div>
-
-        <%- include('form', { forms: forms }) %>
+        <%- include('form', { forms: forms, isNew: true }) %>
 
         <div class="btn-area panel-body">
             <button type="button" class="btn btn-ok btn-primary">登録する</button>
