--- a/views/ticketTypeGroup/form.ejs
+++ b/views/ticketTypeGroup/form.ejs
@@ -1,128 +1,159 @@
-<div class="form-group">
-    <label for="name[ja]" class="">
-        券種グループ名<span class="text-danger">＊</span>
-    </label>
-    <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
-        value="<%= forms.name.ja %>">
-    <p class="message">
-        全角64文字以内でご入力ください。
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors['name.ja']) { %>
-        <%- errors['name.ja'].msg %>
-        <% } %>
-    </p>
-</div>
-
-<div class="form-group">
-    <label for="name[en]" class="">
-        券種グループ名英<span class="text-danger">＊</span>
-    </label>
-    <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
-        value="<%= forms.name.en %>">
-    <p class="message">
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors['name.en']) { %>
-        <%- errors['name.en'].msg %>
-        <% } %>
-    </p>
-</div>
-
-<div class="form-group">
-    <label for="ticketTypes" class="">
-        対象券種名<span class="text-danger">＊</span>
-    </label>
-</div>
-
-<div class="form-group">
-    <span for="price" class="">
-        券種売上金額
-    </span>
-    <div class="row">
-        <div class="col-md-8">
-            <input type="number" class="form-control" name="price" id="price" placeholder="" maxlength=10>
-            <p class="error message text-danger">
-                <% if (errors && errors.ticketTypes) { %>
-                <%- errors.ticketTypes.msg %>
-                <% } %>
-            </p>
+<div class="card">
+    <div class="card-header card-header-primary card-header-text">
+        <div class="card-text">
+            <h4 class="card-title">基本設定</h4>
         </div>
-        <div class=""></div>
-        <div id="price-list" class="mx-auto">
-            <ul id="sortable1" class="connectedSortable">
+    </div>
+    <div class="card-body">
+        <div class="form-group bmd-form-group">
+            <% if (isNew) { %>
+            <label for="identifier" class="bmd-label-static">
+                券種グループコード<span class="text-danger">＊</span>
+            </label>
+            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
+                value="<%= forms.identifier %>">
+            <span class="bmd-help">半角64文字以内でご入力ください</span>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors.identifier) { %>
+                <%- errors.identifier.msg %>
+                <% } %>
+            </span>
+            <% } else { %>
+            <input type="hidden" name="id" value="<%= forms.id %>">
+            <input type="hidden" name="identifier" value="<%= forms.identifier %>">
+            <% } %>
+        </div>
 
-            </ul>
-            <ul id="sortable2" class="connectedSortable">
-                <% ticketTypes.forEach((ticketType) => { %>
-                <li class="ui-state-highlight" uid="<%= ticketType.id %>"
-                    appliesToMovieTicketType="<%= ticketType.priceSpecification.appliesToMovieTicketType %>"
-                    accountsReceivable="<%= ticketType.priceSpecification.accounting.accountsReceivable %>">
-                    <%= ticketType.alternateName.ja %>
-                    <%= `(${Math.floor(ticketType.priceSpecification.price / ticketType.priceSpecification.referenceQuantity.value)})` %>
-                    <%= (ticketType.priceSpecification.appliesToMovieTicketType !== undefined) ? `(${ticketType.priceSpecification.appliesToMovieTicketType})` : '' %>
-                </li>
-                <% }) %>
-            </ul>
+        <div class="form-group bmd-form-group">
+            <label for="name[ja]" class="bmd-label-static">
+                券種グループ名<span class="text-danger">＊</span>
+            </label>
+            <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
+                value="<%= forms.name.ja %>">
+            <span class="bmd-help">全角64文字以内でご入力ください</span>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors['name.ja']) { %>
+                <%- errors['name.ja'].msg %>
+                <% } %>
+            </span>
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <label for="name[en]" class="bmd-label-static">
+                券種グループ名英<span class="text-danger">＊</span>
+            </label>
+            <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
+                value="<%= forms.name.en %>">
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors['name.en']) { %>
+                <%- errors['name.en'].msg %>
+                <% } %>
+            </span>
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <label for="ticketTypes" class="bmd-label-static">
+                対象券種名<span class="text-danger">＊</span>
+            </label>
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <span for="price" class="bmd-label-static">
+                券種売上金額
+            </span>
+            <div class="row">
+                <div class="col-md-8">
+                    <input type="number" class="form-control" name="price" id="price" placeholder="" maxlength=10>
+                    <p class="error message text-danger">
+                        <% if (errors && errors.ticketTypes) { %>
+                        <%- errors.ticketTypes.msg %>
+                        <% } %>
+                    </p>
+                </div>
+                <div class=""></div>
+                <div id="price-list" class="mx-auto">
+                    <ul id="sortable1" class="connectedSortable">
+
+                    </ul>
+                    <ul id="sortable2" class="connectedSortable">
+                        <% ticketTypes.forEach((ticketType) => { %>
+                        <li class="ui-state-highlight" uid="<%= ticketType.id %>"
+                            appliesToMovieTicketType="<%= ticketType.priceSpecification.appliesToMovieTicketType %>"
+                            accountsReceivable="<%= ticketType.priceSpecification.accounting.accountsReceivable %>">
+                            <%= ticketType.alternateName.ja %>
+                            <%= `(${Math.floor(ticketType.priceSpecification.price / ticketType.priceSpecification.referenceQuantity.value)})` %>
+                            <%= (ticketType.priceSpecification.appliesToMovieTicketType !== undefined) ? `(${ticketType.priceSpecification.appliesToMovieTicketType})` : '' %>
+                        </li>
+                        <% }) %>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <label for="description.ja" class="bmd-label-static">
+                補足説明
+            </label>
+            <input type="text" class="form-control" name="description[ja]" id="description.ja" placeholder=""
+                maxlength=64 value="<%= forms.description.ja %>">
+            <span class="bmd-help">全角64文字以内でご入力ください</span>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors['description.ja']) { %>
+                <%- errors['description.ja'].msg %>
+                <% } %>
+            </span>
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <label for="description.en" class="bmd-label-static">
+                補足説明英
+            </label>
+            <input type="text" class="form-control" name="description[en]" id="description.en" placeholder=""
+                maxlength=64 value="<%= forms.description.en %>">
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors['description.en']) { %>
+                <%- errors['description.en'].msg %>
+                <% } %>
+            </span>
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <label for="serviceType" class="bmd-label-static">
+                興行区分<span class="text-danger">＊</span>
+            </label>
+            <select name="serviceType" id="serviceType" class="form-control">
+                <% for (let serviceType of serviceTypes) { %>
+                <% if (forms.serviceType === serviceType.codeValue) { %>
+                <option value="<%= serviceType.codeValue %>" selected>
+                    <%= serviceType.name.ja %>
+                </option>
+                <% } else { %>
+                <option value="<%= serviceType.codeValue %>">
+                    <%= serviceType.name.ja %>
+                </option>
+                <% } %>
+                <% } %>
+            </select>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors.serviceType) { %>
+                <%- errors.serviceType.msg %>
+                <% } %>
+            </span>
         </div>
     </div>
 </div>
 
-<div class="form-group">
-    <label for="description.ja" class="">
-        補足説明
-    </label>
-    <input type="text" class="form-control" name="description[ja]" id="description.ja" placeholder="" maxlength=64
-        value="<%= forms.description.ja %>">
-    <p class="message">
-        全角64文字以内でご入力ください。
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors['description.ja']) { %>
-        <%- errors['description.ja'].msg %>
-        <% } %>
-    </p>
-</div>
+<div class="card">
+    <div class="card-header card-header-primary card-header-text">
+        <div class="card-text">
+            <h4 class="card-title">追加特性</h4>
+        </div>
+    </div>
+    <div class="card-body">
+        <%- include('../common/part/_additionalProperty', {
+            additionalProperty: forms.additionalProperty
+        }) %>
 
-<div class="form-group">
-    <label for="description.en" class="">
-        補足説明英
-    </label>
-    <input type="text" class="form-control" name="description[en]" id="description.en" placeholder="" maxlength=64
-        value="<%= forms.description.en %>">
-    <p class="message">
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors['description.en']) { %>
-        <%- errors['description.en'].msg %>
-        <% } %>
-    </p>
+    </div>
 </div>
-
-<div class="form-group">
-    <label for="serviceType" class="">
-        興行区分<span class="text-danger">＊</span>
-    </label>
-    <select name="serviceType" id="serviceType" class="form-control">
-        <% for (let serviceType of serviceTypes) { %>
-        <% if (forms.serviceType === serviceType.codeValue) { %>
-        <option value="<%= serviceType.codeValue %>" selected>
-            <%= serviceType.name.ja %>
-        </option>
-        <% } else { %>
-        <option value="<%= serviceType.codeValue %>">
-            <%= serviceType.name.ja %>
-        </option>
-        <% } %>
-        <% } %>
-    </select>
-    <p class="error message text-danger">
-        <% if (errors && errors.serviceType) { %>
-        <%- errors.serviceType.msg %>
-        <% } %>
-    </p>
-</div>
-
-<%- include('../common/part/_additionalProperty', {
-    additionalProperty: forms.additionalProperty
-}) %>
+<!-- end card -->
