--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -10,43 +10,45 @@ Aa-8
 <script src="/js/master/commonMasterList.js"></script>
 <script src="/js/master/ticketTypeGroupsList.js"></script>
 <%- contentFor('body') %>
+
 <% /* フォーム */ %>
-<div class="form-container search mb-3">
-    <form method="post" class="p-3 bg-light-gray">
-        <% /* 共通Hiddenコントロール */ %>
-        <%- include('../common/master/_hidden') %>
-        <div class="menu-group">
-            <% /* メッセージ */ %>
-            <% if (message !== '') { %>
-            <p class="error message text-danger panel-body bg-danger">
-                <%= message %>
-            </p>
-            <% } %>
-        </div>
 
-        <div class="form-group">
-            <label for="identifier" class="">
-                券種グループコード
-            </label>
-            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64>
-        </div>
+<div class="card">
+    <div class="card-body">
+        <form method="post">
+            <% /* 共通Hiddenコントロール */ %>
+            <%- include('../common/master/_hidden') %>
+            <div class="menu-group">
+            </div>
 
-        <div class="form-group">
-            <label for="name" class="">
-                券種グループ名
-            </label>
-            <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
-        </div>
+            <div class="form-row">
+                <div class="form-group bmd-form-group col-md-6">
+                    <label for="identifier" class="bmd-label-static">
+                        券種グループコード
+                    </label>
+                    <input type="text" class="form-control" name="identifier" id="identifier" placeholder=""
+                        maxlength=64>
+                </div>
 
-        <div class="panel-body">
-            <a class="btn btn-primary" role="button" href="/ticketTypeGroups/add">
-                <i class=" fa fa-plus"></i> 登録</a>
+                <div class="form-group bmd-form-group col-md-6">
+                    <label for="name" class="bmd-label-static">
+                        券種グループ名
+                    </label>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
+                </div>
+            </div>
 
-            <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-            <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-        </div>
-    </form>
+            <div class="panel-body">
+                <a class="btn btn-primary" role="button" href="/ticketTypeGroups/add">
+                    <i class=" fa fa-plus"></i> 登録</a>
+
+                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
+            </div>
+        </form>
+    </div>
 </div>
+
 <% /* 一覧 */ %>
 <div class="form-container search">
     <p id="resultStats" style="display:none;">
@@ -54,46 +56,44 @@ Aa-8
     <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果$searched_count$件
     </p> -->
-    <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
-        <table class="table table-bordered table-striped mb-0">
-            <thead>
-                <tr>
-                    <th>券種グループコード</th>
-                    <th>券種グループ名</th>
-                    <th>興行区分コード</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr id="templateRow" _id="$id$">
-                    <td name="identifier">$identifier$</td>
-                    <td name="name.ja">$name.ja$</td>
-                    <td name="itemOffered.serviceType.codeValue">$itemOffered.serviceType.codeValue$</td>
-                    <td name="id__id__id" class="center">
-                        <div class="text-center">
-                            <a target="_blank" class="btn btn-sm btn-sm btn-primary"
-                                href="/ticketTypeGroups/$id$/update">
-                                <i class="fas fa-edit"></i>
-                            </a>
-                        </div>
-
-                        <div class="text-center mt-2">
-                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary popupListTicketType"
-                                data-id="$id$">
-                                <span>関連券種</span>
-                            </a>
-                        </div>
-
-                        <div class="text-center mt-2">
-                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary showAdditionalProperty"
-                                data-id="$id$">
-                                <span>追加特性</span>
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <div id="list" style="display:none;">
+        <div class="card">
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead class="text-primary">
+                            <tr>
+                                <th>コード</th>
+                                <th>名称</th>
+                                <th>興行区分</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr id="templateRow" _id="$id$">
+                                <td name="identifier">$identifier$</td>
+                                <td name="name.ja">$name.ja$</td>
+                                <td name="itemOffered.serviceType.codeValue">$itemOffered.serviceType.codeValue$</td>
+                                <td name="id__id__id" class="text-center">
+                                    <a target="_blank" class="btn btn-sm btn-sm btn-primary"
+                                        href="/ticketTypeGroups/$id$/update">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                    <a href="javascript:void(0)"
+                                        class="btn btn-sm btn-outline-primary popupListTicketType" data-id="$id$">
+                                        <span>関連券種</span>
+                                    </a>
+                                    <a href="javascript:void(0)"
+                                        class="btn btn-sm btn-outline-primary showAdditionalProperty" data-id="$id$">
+                                        <span>追加特性</span>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="pager" class="div_pager_parent"></div>
 </div>
